# wixcraft

./: .gitignore  .wixlintrc.json  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
authoring/wix-easy/: Cargo.toml
authoring/wix-easy/src/: lib.rs  main.rs  tui.rs
authoring/wix-env/: Cargo.toml
authoring/wix-env/src/: lib.rs  main.rs
authoring/wix-harvest/: Cargo.toml
authoring/wix-harvest/src/: lib.rs  main.rs
authoring/wix-init/: Cargo.toml
authoring/wix-init/src/: env.rs  guid.rs  install.rs  lib.rs  license.rs  main.rs  project.rs  repair.rs  silent.rs  uninstall.rs  update.rs  wizard.rs
authoring/wix-license/: Cargo.toml
authoring/wix-license/src/: lib.rs  main.rs
authoring/wix-patch/: Cargo.toml
authoring/wix-patch/src/: lib.rs  main.rs
authoring/wix-prereq/: Cargo.toml
authoring/wix-prereq/src/: lib.rs  main.rs
authoring/wix-scan/: Cargo.toml
authoring/wix-scan/src/: lib.rs  main.rs
authoring/wix-simple/: Cargo.toml
authoring/wix-simple/src/: lib.rs  main.rs
authoring/wix-ui/: Cargo.toml
authoring/wix-ui/src/: lib.rs  main.rs
common/ice-validator/: Cargo.toml
common/ice-validator/src/: lib.rs  main.rs  rules.rs  types.rs  validator.rs
common/wix-data/: Cargo.toml  wix.db
common/wix-data/config/: schema.sql  sources.yaml
common/wix-data/scripts/: add_element_examples.py  add_enum_descriptions.py  add_msi_columns.py  add_rule_conditions.py  add_rule_rationales.py  add_sources.py  export_enriched_data.py  fix_all_gaps.py  fix_documentation.py  fix_documentation_artifacts.py  fix_minor_gaps.py  harvest-ui-elements.py
common/wix-data/src/: cache.rs  lib.rs
common/wixkb/: .gitignore  Cargo.toml
common/wixkb/config/: schema.sql  sources.yaml
common/wixkb/config/templates/: keywords.json  light-errors.json  msi-properties.json  preprocessor.json  snippets.json  standard-actions.json  standard-directories.json  v3-v4-diff.json  wix-errors.json
common/wixkb/config/templates/rules/: component-rules.json  service-rules.json
common/wixkb/src/: lib.rs
common/wixkb/src/config/: mod.rs
common/wixkb/src/db/: mod.rs
common/wixkb/src/harvest/: mod.rs
common/wixkb/src/harvest/parsers/: html.rs  mod.rs  xsd.rs
common/wixkb/src/models/: mod.rs
common/wixkb/tests/: cache_tests.rs  cli_tests.rs  db_tests.rs  harvest_tests.rs  lib_tests.rs  reference_data_tests.rs  rules_tests.rs
core/code-detector/: Cargo.toml
core/code-detector/src/: lib.rs
core/project-map/: Cargo.toml
core/project-map/src/: lib.rs
core/schema-loader/: Cargo.toml
core/schema-loader/src/: lib.rs
core/wix-msi/: Cargo.toml
core/wix-msi/src/: lib.rs  main.rs
core/wixcraft/: Cargo.toml
core/wixcraft/src/: lib.rs  main.rs
debug/wix-ca-debug/: Cargo.toml
debug/wix-ca-debug/src/: lib.rs  main.rs
debug/wix-diff/: Cargo.toml
debug/wix-diff/src/: lib.rs  main.rs
debug/wix-doctor/: Cargo.toml
debug/wix-doctor/src/: lib.rs  main.rs
debug/wix-repl/: Cargo.toml
debug/wix-repl/src/: lib.rs  main.rs
debug/wix-test/: Cargo.toml
debug/wix-test/src/: ca.rs  lib.rs  main.rs  msi.rs
docs/: architecture.md  data-sources.md  getting-started.md  msi-pain-points-and-wix-gaps.md  pain-points.md  project-scope.md  repo-structure.md  tool-consolidation.md  tools-list.md
docs/specs/: wix-data-sources.md
docs/wix-docs/: Cargo.toml
docs/wix-docs/src/: generator.rs  lib.rs  main.rs  parser.rs  types.rs
docs/wix-help/: Cargo.toml
docs/wix-help/src/: formatter.rs  kb.rs  lib.rs  main.rs  types.rs
editor/wintellisense/: Cargo.toml
editor/wintellisense/src/: context.rs  index.rs  lib.rs  loader.rs  main.rs  plugin.rs  types.rs
editor/wintellisense/src/completions/: attributes.rs  elements.rs  mod.rs  snippets.rs  values.rs  words.rs
editor/wintellisense/src/providers/: definitions.rs  hover.rs  mod.rs
editor/wix-ai/: Cargo.toml
editor/wix-ai/src/: lib.rs  main.rs
editor/wix-hover/: Cargo.toml
editor/wix-hover/src/: context.rs  hover.rs  lib.rs  loader.rs  main.rs  types.rs
editor/wix-lsp/: Cargo.toml
editor/wix-lsp/config/: settings.yaml
editor/wix-lsp/src/: lib.rs  main.rs
editor/wix-lsp/src/engine/: config.rs  convert.rs  document.rs  mod.rs  server.rs
editor/wix-lsp/src/plugins/: mod.rs  registry.rs  traits.rs
editor/wix-lsp/src/plugins/wix/: mod.rs  plugin.yaml
editor/wix-references/: Cargo.toml
editor/wix-references/src/: lib.rs  main.rs
editor/wix-snippets/: Cargo.toml
editor/wix-snippets/src/: lib.rs
editor/wix-sublime/: Cargo.toml
editor/wix-sublime/src/: lib.rs  main.rs
editor/wix-symbols/: Cargo.toml
editor/wix-symbols/src/: lib.rs  main.rs  symbols.rs  types.rs
editor/wix-syntax/: Cargo.toml
editor/wix-syntax/src/: lib.rs
editor/wix-vscode/: Cargo.toml
editor/wix-vscode/src/: lib.rs  main.rs
integrations/azure-devops/: sample-pipeline.yml
integrations/azure-devops/wixcraft-tasks/: overview.md  vss-extension.json
integrations/pre-commit/: .pre-commit-hooks.yaml  install-hooks.sh  sample-config.yaml
localization/wix-i18n/: Cargo.toml
localization/wix-i18n/src/: lib.rs  main.rs
migration/wix-import/: Cargo.toml
migration/wix-import/src/: lib.rs  main.rs
quality/winter/: Cargo.toml
quality/winter/src/: baseline.rs  cache.rs  complexity.rs  config.rs  cross_file.rs  diagnostic.rs  engine.rs  fixer.rs  lib.rs  lsp.rs  main.rs  plugin.rs  plugin_manager.rs  rule.rs  watch.rs
quality/wix-analyzer/: Cargo.toml
quality/wix-compat/: Cargo.toml
quality/wix-fmt/: Cargo.toml
quality/wix-security/: Cargo.toml
quality/wix-upgrade/: Cargo.toml
quality/wix-wdac/: Cargo.toml
scripts/: extract-xsd.py
signing/wix-sign/: Cargo.toml
tools/msi-explorer/: Cargo.toml
tools/msi-repair/: Cargo.toml
tools/wix-analytics/: Cargo.toml
tools/wix-guid/: Cargo.toml
tools/wix-help/: app.go  go.mod  go.sum  main.go  wails.json
tools/wix-install/: Cargo.toml
tools/wix-migrate/: Cargo.toml
tools/wix-msix/: Cargo.toml
tools/wix-preview/: Cargo.toml
tools/wix-silent/: Cargo.toml
tools/wix-uninstall/: Cargo.toml
tools/wix-update/: Cargo.toml
(+343 files in other folders)
