[package]
name = "wix-easy"
version = "0.1.0"
edition = "2021"
description = "Ansible-like YAML to WiX/MSI generator"
license = "MIT"

[[bin]]
name = "wix-easy"
path = "src/main.rs"

[lib]
name = "wix_easy"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
glob = "0.3"

# TUI dependencies
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"
