[package]
name = "wix-env"
version = "0.1.0"
edition = "2021"
description = "Environment variable and PATH configuration helper for WiX installers"
license = "MIT"

[[bin]]
name = "wix-env"
path = "src/main.rs"

[lib]
name = "wix_env"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
