[package]
name = "wix-harvest"
version = "0.1.0"
edition = "2021"
description = "Modern file harvester for WiX - scan directories and generate WXS fragments"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
glob = "0.3"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "wix-harvest"
path = "src/main.rs"

[lib]
name = "wix_harvest"
path = "src/lib.rs"
