[package]
name = "wix-init"
version = "0.1.0"
edition = "2021"
description = "Unified WiX project lifecycle tool - scaffolding, GUID generation, installation management"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# GUID generation
rand = "0.9"

# Registry access (Windows)
[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "wix-init"
path = "src/main.rs"

[lib]
name = "wix_init"
path = "src/lib.rs"
