[package]
name = "wix-license"
version = "0.1.0"
edition = "2021"
description = "License key validation wizard and WiX component generator"
license = "MIT"

[[bin]]
name = "wix-license"
path = "src/main.rs"

[lib]
name = "wix_license"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
