[package]
name = "wix-patch"
version = "0.1.0"
edition = "2021"
description = "Simplified patch/MSP generation for WiX installers"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "wix-patch"
path = "src/main.rs"

[lib]
name = "wix_patch"
path = "src/lib.rs"
