[package]
name = "wix-prereq"
version = "0.1.0"
edition = "2021"
description = "Prerequisites detection and bundle helper for WiX installers"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
regex = "1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "wix-prereq"
path = "src/main.rs"

[lib]
name = "wix_prereq"
path = "src/lib.rs"
