[package]
name = "wix-simple"
version = "0.1.0"
edition = "2021"
description = "Simplified WiX installer generator - create complete installers from minimal config"
license = "MIT"

[[bin]]
name = "wix-simple"
path = "src/main.rs"

[lib]
name = "wix_simple"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
