[package]
name = "wix-ui"
version = "0.1.0"
edition = "2021"
description = "WiX UI sequence generator and customizer"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "wix-ui"
path = "src/main.rs"

[lib]
name = "wix_ui"
path = "src/lib.rs"
