[package]
name = "ice-validator"
version = "0.1.0"
edition = "2021"
description = "Cross-platform ICE (Internal Consistency Evaluator) validator for MSI files"
license = "MIT"

[[bin]]
name = "ice-validator"
path = "src/main.rs"

[lib]
name = "ice_validator"
path = "src/lib.rs"

[dependencies]
# MSI database parsing
msi = "0.9"

# SQLite for wixkb access
rusqlite = { version = "0.32", features = ["bundled"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Regex for pattern matching in rules
regex = "1.10"

# Home directory detection
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"
