[package]
name = "wixkb"
version = "0.1.0"
edition = "2021"
description = "WiX Knowledge Base - SQLite-backed database for WiX Toolset metadata"
license = "MIT"
readme = "README.md"

[lib]
name = "wixkb"
path = "src/lib.rs"

[[bin]]
name = "wixkb"
path = "src/bin/wixkb.rs"

[[bin]]
name = "database"
path = "src/bin/database.rs"

[[bin]]
name = "harvest"
path = "src/bin/harvest.rs"

[[bin]]
name = "config"
path = "src/bin/config.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
lru = "0.12"
roxmltree = "0.19"
reqwest = { version = "0.12", features = ["blocking"] }
regex = "1.10"
walkdir = "2.5"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
scraper = "0.19"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
