[package]
name = "project-map"
version = "0.1.0"
edition = "2021"
description = "Project indexer with symbol graph and relevance detection"
license = "MIT"

[dependencies]
code-detector = { path = "../code-detector" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.0"
