[package]
name = "schema-loader"
version = "0.1.0"
edition = "2021"
description = "Language pack loader for code tooling framework"
license = "MIT"

[dependencies]
code-detector = { path = "../code-detector" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.0"
