[package]
name = "wix-msi"
version = "0.1.0"
edition = "2021"
description = "Cross-platform MSI compiler - build MSI packages on any OS"
license = "MIT"

[[bin]]
name = "wix-msi"
path = "src/main.rs"

[lib]
name = "wix_msi"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
roxmltree = "0.20"
uuid = { version = "1", features = ["v4"] }
