[package]
name = "wixcraft"
version = "0.1.0"
edition = "2021"
description = "WixCraft - Universal installer tooling framework"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[[bin]]
name = "wixcraft"
path = "src/main.rs"

[lib]
name = "wixcraft"
path = "src/lib.rs"
