[package]
name = "wix-ca-debug"
version = "0.1.0"
edition = "2021"
description = "Custom Action debugger and analyzer for WiX/MSI"
license = "MIT"

[[bin]]
name = "wix-ca-debug"
path = "src/main.rs"

[lib]
name = "wix_ca_debug"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
