[package]
name = "wix-diff"
version = "0.1.0"
edition = "2021"
description = "Compare WiX/MSI versions and show changes"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
roxmltree = "0.21"
similar = "2"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "wix-diff"
path = "src/main.rs"

[lib]
name = "wix_diff"
path = "src/lib.rs"
