[package]
name = "wix-repl"
version = "0.1.0"
edition = "2021"
description = "Interactive REPL for WiX development and testing"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "wix-repl"
path = "src/main.rs"

[lib]
name = "wix_repl"
path = "src/lib.rs"
