[package]
name = "wix-docs"
version = "0.1.0"
edition = "2021"
description = "Documentation generator for WiX projects (doxygen-like)"
license = "MIT"

[dependencies]
# XML parsing
roxmltree = "0.20"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File handling
walkdir = "2.5"
glob = "0.3"

# Output generation
pulldown-cmark = "0.10"  # Markdown parsing
handlebars = "5.1"       # HTML templating

# Terminal output
colored = "2.1"

# Regex for comment parsing
regex = "1.10"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.10"
