[package]
name = "wix-ai"
version = "0.1.0"
edition = "2021"
description = "AI-assisted WiX code generation and suggestions"
license = "MIT"

[[bin]]
name = "wix-ai"
path = "src/main.rs"

[lib]
name = "wix_ai"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
