[package]
name = "wix-references"
version = "0.1.0"
edition = "2021"
description = "Go to Definition and Find References for WiX files"
license = "MIT"
keywords = ["wix", "references", "definition", "lsp"]
categories = ["development-tools"]

[dependencies]
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "wix-references"
path = "src/main.rs"

[lib]
name = "wix_references"
path = "src/lib.rs"
