[package]
name = "wix-symbols"
version = "0.1.0"
edition = "2021"
description = "WiX document symbols extractor for outline views and Go to Symbol"
license = "MIT"
keywords = ["wix", "symbols", "outline", "lsp"]
categories = ["development-tools"]

[dependencies]
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "wix-symbols"
path = "src/main.rs"

[lib]
name = "wix_symbols"
path = "src/lib.rs"
